# embq

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/embq-core/: Cargo.toml
crates/embq-core/src/: lib.rs
crates/embq-core/tests/: correctness.rs
crates/embq-py/: Cargo.toml
crates/embq-py/src/: lib.rs
doc/: arquitetura.md  guia_tecnico.md  resumo.md
examples/leaderboard/: requirements.txt  run.py
python/embq/: __init__.py  cli.py  io.py  report.py
tests/: test_cli.py  test_io.py  test_profile.py
