[workspace]
resolver = "2"
members = [
    "crates/embq-core",
    "crates/embq-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mjlelis/embq"
rust-version = "1.87"

[workspace.dependencies]
thiserror = "1"
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module"] }
numpy = "0.22"

# Optimize the kernel hard; lets LLVM autovectorize the simple loops.
[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
